# cloud-kitchen-dashboard

./: README.md  app.py  kitchen-analysis.ipynb  pyproject.toml
