[project]
name = "cloud-kitchen-dashboard"
version = "0.1.0"
description = "Create a Dashboard to understand the PnL of Cloud Kitchen Dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
